# libamia

./: Makefile.am  README  bootstrap  configure.ac  libamia.pc.in
include/: amia.h  include.mk
m4/: amia.m4
src/: amia.c  daemonize.3  include.mk
tests/: include.mk  testsuite.at
